--- a/.github/workflows/basic_checks.yaml
+++ b/.github/workflows/basic_checks.yaml
@@ -1,26 +1,24 @@
 on: [push]
 
 env:
-  cache-version: v4
-  repo-name: tidytranscriptomics-workshops/LoveMangiola2022_tidytranscriptomics
+  cache-version: v1
+  repo-name: tidytranscriptomics-workshops/iscb2022_tidytranscriptomics
+  GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }} 
 
-
-    
 jobs:
   r-build-and-check:
     runs-on: ubuntu-latest
-    container: bioconductor/bioconductor_docker:devel
+    container: bioconductor/bioconductor_docker:RELEASE_3_14
     env:
       R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
-      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
+
       - name: Query dependencies and update old packages
         run: |
-          # We'll install the specific versions needed
-          BiocManager::install("stemangiola/tidySingleCellExperiment@v1.9.1")
-          BiocManager::install("stemangiola/tidySummarizedExperiment@v1.9.2")
-          BiocManager::install("stemangiola/tidybulk@v1.11.1")
+          # We'll install the specific versions from the install instructions
+          BiocManager::install("stemangiola/tidyseurat@v0.5.1")
+          BiocManager::install("stemangiola/tidySingleCellExperiment@v1.3.2")
           
           # Then install the other dependencies in the usual way
           BiocManager::install(ask=FALSE)
@@ -35,12 +33,12 @@ jobs:
           key: ${{ env.cache-version }}-${{ runner.os }}-r-${{ hashFiles('.github/depends.Rds') }}
           restore-keys: ${{ env.cache-version }}-${{ runner.os }}-r-
           
-       # This lets us augment with additional dependencies
-      - name: Install system dependencies
-        if: runner.os == 'Linux'
-        env:
-          RHUB_PLATFORM: linux-x86_64-ubuntu-gcc
-        run: |
+       # This lets us augment with additional dependencies	
+      - name: Install system dependencies	
+        if: runner.os == 'Linux'	
+        env:	
+          RHUB_PLATFORM: linux-x86_64-ubuntu-gcc	
+        run: |	
           Rscript -e "remotes::install_github('r-hub/sysreqs')"	
           sysreqs=$(Rscript -e "cat(sysreqs::sysreq_commands('DESCRIPTION'))")	
           sudo -s eval "$sysreqs"
@@ -72,7 +70,7 @@ jobs:
           apt-get -y install rsync
 
       - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@releases/v4
+        uses: JamesIves/github-pages-deploy-action@releases/v3
         if: github.ref == 'refs/heads/master'
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -88,10 +86,11 @@ jobs:
       # This is used to complete the identity challenge
       # with sigstore/fulcio when running outside of PRs.
       id-token: write
+
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
-
+        uses: actions/checkout@v2
+        
       - name: Set Environment Variables
         run: |
           REPO_LOWER="$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')"
@@ -100,10 +99,12 @@ jobs:
           echo "GIT_SHA=$(echo ${{ github.sha }} | cut -c1-7)" >> $GITHUB_ENV
           echo "REGISTRY=${REGISTRY}" >> $GITHUB_ENV
           echo "IMAGE=${REGISTRY}/${REPO_LOWER}" >> $GITHUB_ENV
-
+          
       - name: Show environment
         run: |
           env
+
+
       # Install the cosign tool except on PR
       # https://github.com/sigstore/cosign-installer
       - name: Install cosign
@@ -111,9 +112,12 @@ jobs:
         uses: sigstore/cosign-installer@1e95c1de343b5b0c23352d6417ee3e48d5bcd422
         with:
           cosign-release: 'v1.4.0'
+
+
       # Workaround: https://github.com/docker/build-push-action/issues/461
       - name: Setup Docker buildx
         uses: docker/setup-buildx-action@79abd3f86f79a9d68a23c75a09a9a85889262adf
+
       # Login against a Docker registry except on PR
       # https://github.com/docker/login-action
       - name: Log into registry ${{ env.REGISTRY }}
@@ -131,6 +135,7 @@ jobs:
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
           images: ${{ env.IMAGE }}
+
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
       - name: Build and push Docker image
@@ -142,6 +147,7 @@ jobs:
           tags: |
             ${{ env.IMAGE }}:latest
             ${{ env.IMAGE }}:${{ env.GIT_SHA }}
+
       # Sign the resulting Docker image digest except on PRs.
       # This will only write to the public Rekor transparency log when the Docker
       # repository is public to avoid leaking data.  If you would like to publish
@@ -154,3 +160,4 @@ jobs:
         # This step uses the identity token to provision an ephemeral certificate
         # against the sigstore community Fulcio instance.
         run: cosign sign ${{ env.IMAGE }}@${{ steps.build-and-push.outputs.digest }}
+        
